# CEM_Asymptotics

./: .gitignore  README.md  main.py  pyproject.toml  regenerate_plots.py  requirements.txt  run_real_data.py
configs/: simulation_design.json
docs/: JRSSB_SUBMISSION_CHECKLIST.md  implementation_status.md  old_new_results_crosswalk.md  pre_submission_reader_check.md  reference_audit.json  reference_verification.md  research_contract.md  simulation_design.md  target_audit_2026-07-13.md  theory_dependency_map.md
hpc/: run_real_data_array.sbatch  run_simulation_array.sbatch  run_target_array.sbatch  setup_environment.sh  submit_confirmatory.sh
inference/: boundary.py  sandwich.py  scores.py  utils.py
paper/: jrssb_main.tex  jrssb_supplement.tex  main.tex  oup-authoring-template.cls  references.bib  supplement.tex
scripts/: audit_references.py  build_asymptotic_extension_manifest.py  build_hpc_manifests.py  build_interpretable_application_table.py  build_jrss_submission.py  build_real_data_manifest.py  build_simulation_tables.py  build_submission.sh  build_supplement_tables.py  compute_cml_target.py  make_paper_figures.py  run_boundary_convergence.py  run_end_to_end_pilot.py  run_real_data_bootstrap_chunk.py  run_real_data_screen.py  run_simulation_chunk.py  summarize_normality.py  summarize_real_data.py  summarize_simulation.py
simulation/: cml_targets.json  compute_cml_targets.py  diagnostics.py  metrics.py  monte_carlo.py  plots.py  scenarios.py  tables.py
tests/: test_bandwidth.py  test_boundary.py  test_distributions.py  test_fmvmm_adapter.py  test_model.py  (+3 more)
(+158 files in other folders)
