[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cem-boundary-inference"
version = "0.4.0"
description = "Boundary-aware inference for classification likelihood estimators"
requires-python = ">=3.11"
dependencies = [
    "fmvmm==3.0.0",
    "joblib>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.6",
    "scipy>=1.12",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.9", "seaborn>=0.13"]
test = ["pytest>=8", "pytest-cov>=5"]
dev = ["cem-boundary-inference[plot,test]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
